@@ -1432,54 +1432,78 @@ function processingMsg($buf) {
         $msgcount++;
 }
 
-function createNewAlbum($parentName) {
-	global $gallery;
+function createNewAlbum( $parentName, $newAlbumName="", $newAlbumTitle="", $newAlbumDesc="" ) {
+        global $gallery;
 
-	$albumDB = new AlbumDB(FALSE);
-	$gallery->session->albumName = $albumDB->newAlbumName();
-	$gallery->album = new Album();
-	$gallery->album->fields["name"] = $gallery->session->albumName;
-	$gallery->album->setOwner($gallery->user->getUid());
-	$gallery->album->save();
-	/* if this is a nested album, set nested parameters */
-	if ($parentName) {
-		$gallery->album->fields[parentAlbumName] = $parentName;
-		$parentAlbum = $albumDB->getAlbumbyName($parentName);
-		$parentAlbum->addNestedAlbum($gallery->session->albumName);
-		$parentAlbum->save();
-		// Set default values in nested album to match settings of parent.
-		$gallery->album->fields["perms"]        = $parentAlbum->fields["perms"];
-		$gallery->album->fields["bgcolor"]      = $parentAlbum->fields["bgcolor"];
-		$gallery->album->fields["textcolor"]    = $parentAlbum->fields["textcolor"];
-		$gallery->album->fields["linkcolor"]    = $parentAlbum->fields["linkcolor"];
-		$gallery->album->fields["font"]         = $parentAlbum->fields["font"];
-		$gallery->album->fields["border"]       = $parentAlbum->fields["border"];
-		$gallery->album->fields["bordercolor"]  = $parentAlbum->fields["bordercolor"];
-		$gallery->album->fields["returnto"]     = $parentAlbum->fields["returnto"];
-		$gallery->album->fields["thumb_size"]   = $parentAlbum->fields["thumb_size"];
-		$gallery->album->fields["resize_size"]  = $parentAlbum->fields["resize_size"];
-		$gallery->album->fields["rows"]         = $parentAlbum->fields["rows"];
-		$gallery->album->fields["cols"]         = $parentAlbum->fields["cols"];
-		$gallery->album->fields["fit_to_window"]= $parentAlbum->fields["fit_to_window"];
-		$gallery->album->fields["use_fullOnly"] = $parentAlbum->fields["use_fullOnly"];
-		$gallery->album->fields["print_photos"] = $parentAlbum->fields["print_photos"];
-		$gallery->album->fields["use_exif"]     = $parentAlbum->fields["use_exif"];
-		$gallery->album->fields["display_clicks"]=$parentAlbum->fields["display_clicks"];
-		$gallery->album->fields["public_comments"]=$parentAlbum->fields["public_comments"];
+        // get parent album name
+        $albumDB = new AlbumDB(FALSE);
 
-		$returnVal = $gallery->album->save();
-	} else {
-		/*
-		* Get a new albumDB because our old copy is not up to
-		* date after we created a new album
-		*/
-		$albumDB = new AlbumDB(FALSE);
+        // Make sure no album $newAlbumName exists
+        if ($newAlbumName && $albumDB->getAlbumbyName($newAlbumName)) {
+                $newAlbumName = null;
+        }
 
-		/* move the album to the top if not a nested album*/
-		$numAlbums = $albumDB->numAlbums($gallery->user);
-		$albumDB->moveAlbum($gallery->user, $numAlbums, 1);
-		$returnVal = $albumDB->save();
-	}
-	return $returnVal;
+        // set new album name from param or default
+        if ($newAlbumName) {
+                $gallery->session->albumName = $newAlbumName;
+        } else {
+                $gallery->session->albumName = $albumDB->newAlbumName();
+        }
+
+        $gallery->album = new Album();
+        $gallery->album->fields["name"] = $gallery->session->albumName;
+
+        // set title and description
+        if ($newAlbumTitle) {
+                $gallery->album->fields["title"] = $newAlbumTitle;
+        }
+        if ($newAlbumDesc) {
+                $gallery->album->fields["description"] = $newAlbumDesc;
+        }
+
+        $gallery->album->setOwner($gallery->user->getUid());
+        $gallery->album->save();
+
+        /* if this is a nested album, set nested parameters */
+        if ($parentName) {
+                $gallery->album->fields[parentAlbumName] = $parentName;
+                $parentAlbum = $albumDB->getAlbumbyName($parentName);
+                $parentAlbum->addNestedAlbum($gallery->session->albumName);
+                $parentAlbum->save();
+                // Set default values in nested album to match settings of parent.
+                $gallery->album->fields["perms"]           = $parentAlbum->fields["perms"];
+                $gallery->album->fields["bgcolor"]         = $parentAlbum->fields["bgcolor"];
+                $gallery->album->fields["textcolor"]       = $parentAlbum->fields["textcolor"];
+                $gallery->album->fields["linkcolor"]       = $parentAlbum->fields["linkcolor"];
+                $gallery->album->fields["font"]            = $parentAlbum->fields["font"];
+                $gallery->album->fields["border"]          = $parentAlbum->fields["border"];
+                $gallery->album->fields["bordercolor"]     = $parentAlbum->fields["bordercolor"];
+                $gallery->album->fields["returnto"]        = $parentAlbum->fields["returnto"];
+                $gallery->album->fields["thumb_size"]      = $parentAlbum->fields["thumb_size"];
+                $gallery->album->fields["resize_size"]     = $parentAlbum->fields["resize_size"];
+                $gallery->album->fields["rows"]            = $parentAlbum->fields["rows"];
+                $gallery->album->fields["cols"]            = $parentAlbum->fields["cols"];
+                $gallery->album->fields["fit_to_window"]   = $parentAlbum->fields["fit_to_window"];
+                $gallery->album->fields["use_fullOnly"]    = $parentAlbum->fields["use_fullOnly"];
+                $gallery->album->fields["print_photos"]    = $parentAlbum->fields["print_photos"];
+                $gallery->album->fields["use_exif"]        = $parentAlbum->fields["use_exif"];
+                $gallery->album->fields["display_clicks"]  = $parentAlbum->fields["display_clicks"];
+                $gallery->album->fields["public_comments"] = $parentAlbum->fields["public_comments"];
+
+                $returnVal = $gallery->album->save();
+        } else {
+                /*
+                 * Get a new albumDB because our old copy is not up to
+                 * date after we created a new album
+                 */
+                $albumDB = new AlbumDB(FALSE);
+
+                /* move the album to the top if not a nested album*/
+                $numAlbums = $albumDB->numAlbums($gallery->user);
+                $albumDB->moveAlbum($gallery->user, $numAlbums, 1);
+                $returnVal = $albumDB->save();
+        }
+
+        return $returnVal;
 }
 ?>
