@@ -1,3 +1,8 @@
+2003-02-24  John Kirkland <jpk@bl.org> 1.3.4-cvs-b15
+
+	* Merged GRcreateNewAlbum in gallery_remote2.php with createNewAlbum
+	  in util.php per Pierre's request.
+
 2003-02-24  Pierre-Luc Paour <paour@users.sourceforge.net> 1.3.4-cvs-b14
 
 	* gallery_remote2.php: check to prevent new album creation to overwrite
